[package]
name = "kharazmi"
version = "0.1.0"
edition = "2024"

[dependencies]
fast_html2md = "0.0.55"
html-to-markdown-rs = "2.16.1"
only_scraper = "0.1.2"
readability-js = "0.1.5"

rig-core = { version = "0.27.0", features = ["all"] }
schemars = { version = "1.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serpapi-search-rust = "0.1.0"
termimad = "0.34.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
