[package]
name = "serpscraper"
version = "0.1.2"
edition = "2024"
description = "A CLI tool to fetch and convert search results into Markdown."
license = "MIT"
repository = "https://github.com/hghalebi/serpscraper"
keywords = ["cli", "search", "markdown", "scraper"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "serpscraper"
path = "src/lib.rs"

[[bin]]
name = "serpscraper"
path = "src/main.rs"

[dependencies]
html-to-markdown-rs = "2.16.1"
only_scraper = "0.1.2"
readability-js = "0.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serpapi-search-rust = "0.1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
